--- a/packages/satellite-solana/package.json
+++ b/packages/satellite-solana/package.json
@@ -43,23 +43,24 @@
     }
   ],
   "peerDependencies": {
-    "@bonfida/spl-name-service": ">=3",
     "@tuwaio/orbit-core": ">=0",
     "@tuwaio/orbit-solana": ">=0",
     "@tuwaio/satellite-core": ">=0",
-    "@solana/web3.js": ">=1.98.4",
+    "@solana-mobile/wallet-standard-mobile": ">=0.4",
     "gill": ">=0.11",
-    "dayjs": ">=1",
     "immer": ">=10",
     "zustand": ">=5"
   },
   "devDependencies": {
-    "@bonfida/spl-name-service": "^3.0.16",
     "@tuwaio/orbit-core": "workspace:^",
     "@tuwaio/orbit-solana": "workspace:^",
     "@tuwaio/satellite-core": "workspace:^",
-    "@solana/web3.js": "^1.98.4",
-    "dayjs": "^1.11.18",
+    "@solana-mobile/wallet-standard-mobile": "^0.4.1",
+    "@wallet-standard/app": "^1.1.0",
+    "@wallet-standard/base": "^1.1.0",
+    "@wallet-standard/features": "^1.1.0",
+    "@wallet-standard/ui": "^1.0.1",
+    "@wallet-standard/ui-registry": "^1.0.1",
     "gill": "^0.11.0",
     "immer": "^10.1.3",
     "jsdom": "^26.1.0",
